<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/value_54"
        android:id="@+id/rlTool">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/payment"
            android:textStyle="bold"
            android:textSize="@dimen/textsize_16sp"
            android:textColor="@android:color/black"/>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/rlTool"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:id="@+id/recyCards"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:layout_below="@+id/rlTool"
        android:visibility="gone"
        android:id="@+id/rlLoader">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:layout_below="@+id/rlTool"
        android:id="@+id/rlEmptyList"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_card_available"
            android:layout_centerInParent="true"
            android:textSize="@dimen/textsize_20sp"
            android:textStyle="italic"/>
    </RelativeLayout>

    <Button
        android:layout_width="@dimen/value_180"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/value_24"
        android:text="@string/add_card"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:id="@+id/btnAddCard"
        android:textSize="@dimen/textsize_16sp"
        android:background="@drawable/btn_theme_cruve"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_alignParentBottom="true"
        android:id="@+id/viewBottom"/>
</RelativeLayout>